--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <link rel="stylesheet" href="css/styles.css" type="text">
     </head>
     <body>
-        
+        <script src="script
+        src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+        crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
